compiler/tests/fixtures/invalid/semantics/duplicate_action_name.viv
// Invalid: Two actions with the same name

action greet:
    roles:
        @greeter:
            as: initiator

action greet:
    roles:
        @waver:
            as: initiator
